# Chatfilter

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-frontend.yml
config/: config.yaml  settings.py  variants.yaml
demo/: sender.py  startdemo.sh  弹幕列表.csv
docs/: DESIGN.md
docs/ppt/: index.html
docs/ppt/diagrams/: architecture.drawio
frontend/: dashboard.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.ts  cluster.ts  embedder.ts  engine.ts  main.ts  preprocess.ts
frontend/src/dashboard/: App.tsx  index.tsx
frontend/src/dashboard/components/: ClusterGrid.tsx  EventList.tsx  ModelLoader.tsx
frontend/src/dashboard/lib/: bridge.ts
frontend/src/dashboard/store/: chatStore.ts  clusterStore.ts
scripts/: active_label.py  build_cython.sh  demo_preprocess.py  demo_terminal_server.py  export_onnx.py  finetune_bge.py  setup_models.sh
src/: start.py
src/engine/: alias_normalizer.py  canonical_registry.py  cluster_engine.py  cycle_compressor.py  dedup_store.py  embedder.py  keyword_util.py  micro_cluster.py  normalizer.py  pipeline_cache.py  preprocessor.py  simhash_dedup.py  variant_normalizer.py
src/network/: http_server.py
static/: monitor.html
